src/test/deca/syntax/valid/printlnx.deca
// Description:
//          Utilisation de printlnx
//
// Résultat:
//Succès
//
{
    int a = 62 ; 
    printlnx(a,"in hexadecimal");
}