src/test/deca/syntax/invalid/no_CPARENT.deca
//  Description :
//            Pas de ) à la fin du println
//
// Résultat:
//missing ')' at ';'
//
{
    println("Hello";
}